# DubSync

./: .dockerignore  .env.example  .gitignore  Dockerfile  GPT-5.6-SOL-ULTRA-EXECUTION-PROMPT.md  OPUS-4.8-EXECUTION-PROMPT.md  OPUS-4.8-FIX-PROMPT.md  PLAN.md  README.md  provider.yaml  providers.example.yaml  pyproject.toml  render.yaml  style_profile.yaml
Examples/: srt test.srt
docs/: COMMERCIAL_PLAN.md
docs/testing/: brand-theme-seo.tdd.md  commercial-web-mvp.tdd.md  dubsync-plan.tdd.md  gemini-3-5-flash-lite-migration.tdd.md  (+2 more)
tests/: conftest.py  test_adjudication_and_punctuation.py  test_adjudication_context.py  test_alignment_and_recue.py  test_asr_timing.py  test_audio_and_providers.py  test_audio_snippets.py  test_batch_cli.py  test_batch_regressions.py  test_cache_and_cost.py  test_documentation_acceptance.py  test_evaluation_metrics.py  test_forced_alignment.py  test_gemini_adapter.py  test_job_reliability.py  test_live_smoke.py  test_llm_pass_config.py  test_llm_usage_cost.py  test_non_latin_text.py  test_overlap_and_changes.py  test_overlap_detection.py  test_pipeline_cli.py  test_provider_config_validation.py  test_punctuation_pipeline.py  test_silence_gate.py  test_source_quality.py  test_speaker_mapping.py  test_srt_io_limits.py  test_srt_profile.py  test_timing_refinement.py  test_transcription.py  test_vad.py  test_verify_scores.py  test_web_app.py  test_web_batches.py  test_web_design_contract.py  test_web_intake_security.py  test_web_srt_limits.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+83 files in other folders)
